--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,7 @@
     margin: 0;
     box-sizing: border-box;
     font-family: 'Lato', sans-serif;
+    /* outline: solid 1px green; */
 
 }
 body{
@@ -278,6 +279,10 @@ z-index: 012;
 
 .books{
     display: flex;
+margin: 0 auto;
+align-items: center;
+justify-content: center;    
+flex-wrap: wrap;
 }
 .book{
    
